# KaosDual

./: GITHUB_SETUP.md  README.md  kaos_protocol.h
.github/workflows/: main.yml
esp32/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
esp32/main/: CMakeLists.txt  Skylander.c  Skylander.h  SkylanderCrypt.c  kaos_protocol.h  main.c  pico_bridge.c  pico_bridge.h  skylander_ids.h  web_ui.c  web_ui.h
pico/: CMakeLists.txt  SkylanderCrypt.h  main.c  pico_sdk_import.cmake  rijndael.c  rijndael.h  skylander_slots.c  skylander_slots.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
pico/boards/: waveshare_rp2040_zero.h
